# stellar-terra-green

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml  deploy-contracts.yml  deploy.yml
apps/contracts/: Cargo.toml
apps/contracts/community_governance/: Cargo.toml
apps/contracts/community_governance/src/: lib.rs
apps/contracts/energy_distribution/: Cargo.toml
apps/contracts/energy_distribution/src/: lib.rs
apps/contracts/energy_token/: Cargo.toml
apps/contracts/energy_token/src/: lib.rs
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/certificates/: route.ts
apps/web/src/app/api/certificates/[id]/: route.ts
apps/web/src/app/api/certificates/[id]/retire/: route.ts
apps/web/src/app/api/meters/readings/: route.ts
apps/web/src/app/certificates/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/dashboard/members/: page.tsx
apps/web/src/app/dashboard/meters/: page.tsx
apps/web/src/lib/: validators.ts
apps/web/src/lib/stellar/: mint.ts  retire.ts
docs/: ARCHITECTURE.md  CONTRACTS.md  DEPLOYMENT.md
